<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:rotationX="0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.8"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/content_2_title"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_weight="0.8"
            android:maxWidth="30dp"
            android:maxHeight="57dp"
            android:minHeight="57dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:bufferType="normal"
        android:fontFamily="@font/cousine"
        android:paddingLeft="6dp"
        android:paddingRight="0.5dp"
        android:rotationX="0"
        android:text="@string/content_2_body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent"
        android:textColorHint="#FFFFFF"
        android:textSize="17dp"
        android:paddingEnd="0.5dp"
        android:paddingStart="6dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_more_horiz_24"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/content_2_ingredients"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            app:srcCompat="@drawable/cookie" />

    </LinearLayout>

</LinearLayout>