<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:rotationX="0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_weight="0.8"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/content_1_title"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_weight="0.8"
            android:maxWidth="57dp"
            android:maxHeight="57dp"
            android:minHeight="57dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_1_body"
        android:textColor="@color/colorAccent"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_1_body"
        app:srcCompat="@drawable/ic_baseline_more_horiz_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/content_1_ingredients"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="292dp"
            android:layout_height="343dp"
            android:contentDescription="@string/content_1_title"
            app:srcCompat="@drawable/brownie" />

    </LinearLayout>

</LinearLayout>